[gd_scene load_steps=16 format=3 uid="uid://drib62ut2dw31"]

[ext_resource type="Texture2D" uid="uid://cnao8e7ie3yjj" path="res://assets/graphics/fondo.png" id="1_lfkr5"]
[ext_resource type="Script" uid="uid://btoa68goe3v3o" path="res://scenes/inicio/Inicio.gd" id="1_qbkfo"]
[ext_resource type="Texture2D" uid="uid://cl44vft647qaw" path="res://assets/graphics/texto inicio del juego titila.png" id="3_ea6f7"]
[ext_resource type="Shortcut" uid="uid://ba1mejdgr0o6x" path="res://P-centro.tres" id="4_yq3cq"]
[ext_resource type="Texture2D" uid="uid://de6omiiq7in7v" path="res://assets/graphics/vamos a jugar.png" id="5_q6its"]
[ext_resource type="Texture2D" uid="uid://ciob8wqff7ggt" path="res://assets/graphics/primera pagina sin fondo.png" id="5_sif4j"]
[ext_resource type="Texture2D" uid="uid://dyfyt0imdif24" path="res://assets/graphics/flecha derecha.png" id="6_btuh2"]
[ext_resource type="SpriteFrames" uid="uid://b4qsb0xlfnjtl" path="res://mano.tres" id="6_sif4j"]
[ext_resource type="Shortcut" uid="uid://dph1lh28dwcah" path="res://7-der.tres" id="7_1dh67"]
[ext_resource type="Texture2D" uid="uid://dhkb5kxslp3fn" path="res://assets/graphics/usa la flecha.png" id="7_1gr4y"]
[ext_resource type="Texture2D" uid="uid://s4rn7ubrodhm" path="res://assets/graphics/usa las flecha.png" id="8_rwlf0"]
[ext_resource type="Texture2D" uid="uid://tgcy3qtd3qe2" path="res://assets/graphics/flecha izquierda.png" id="9_d17nt"]
[ext_resource type="Texture2D" uid="uid://1ghi1di6511c" path="res://assets/graphics/el juego empezara.png" id="10_pjmwy"]
[ext_resource type="Texture2D" uid="uid://c1e00w7cbeyhm" path="res://assets/graphics/conteo 3.png" id="11_qah25"]
[ext_resource type="Shortcut" uid="uid://bfiw12hjqgm4c" path="res://W-izq.tres" id="12_sif4j"]

[node name="Inicio" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qbkfo")

[node name="TextureRectFondo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 2000.0
offset_bottom = 1512.0
texture = ExtResource("1_lfkr5")

[node name="PanelTitulo" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = -2.0
offset_right = 4053.0
offset_bottom = 3022.0
scale = Vector2(0.284127, 0.213806)

[node name="TextureRectTitulo" type="TextureRect" parent="PanelTitulo"]
layout_mode = 2
texture = ExtResource("3_ea6f7")

[node name="ButtonEmpezar" type="TextureButton" parent="PanelTitulo"]
layout_mode = 2
shortcut = ExtResource("4_yq3cq")
texture_normal = ExtResource("5_sif4j")
stretch_mode = 0

[node name="AnimatedSprite2DTituloManoDer" type="AnimatedSprite2D" parent="PanelTitulo"]
position = Vector2(1868.88, 2202.93)
scale = Vector2(1.37194, 1.78501)
sprite_frames = ExtResource("6_sif4j")
autoplay = "default"
frame_progress = 0.506524
speed_scale = 3.0

[node name="PanelTutorialPag2" type="Control" parent="."]
anchors_preset = 0

[node name="TextureRectTextoPag2" type="TextureRect" parent="PanelTutorialPag2"]
layout_mode = 1
offset_right = 2667.0
offset_bottom = 1512.0
scale = Vector2(0.432737, 0.432737)
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
texture = ExtResource("5_q6its")

[node name="ButtonContinuarPag2" type="TextureButton" parent="PanelTutorialPag2"]
layout_mode = 0
offset_left = 261.0
offset_top = 315.0
offset_right = 2261.0
offset_bottom = 1827.0
scale = Vector2(0.318427, 0.252733)
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
shortcut = ExtResource("7_1dh67")
texture_normal = ExtResource("6_btuh2")

[node name="AnimatedSprite2DTituloManoDer" type="AnimatedSprite2D" parent="PanelTutorialPag2"]
position = Vector2(617, 423)
scale = Vector2(0.746616, 0.99319)
sprite_frames = ExtResource("6_sif4j")
autoplay = "default"
frame_progress = 0.0802462
speed_scale = 3.0

[node name="PanelTutorialPag3" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 2000.0
offset_bottom = 1512.0
scale = Vector2(0.430514, 0.430514)

[node name="TextureRectTextoPag3" type="TextureRect" parent="PanelTutorialPag3"]
layout_mode = 2
offset_right = 2692.0
offset_bottom = 1512.0
texture = ExtResource("7_1gr4y")

[node name="ButtonContinuarPag3" type="TextureButton" parent="PanelTutorialPag3"]
layout_mode = 2
offset_left = 573.733
offset_top = 717.747
offset_right = 2573.73
offset_bottom = 2229.75
scale = Vector2(0.71727, 0.609717)
shortcut = ExtResource("7_1dh67")
texture_normal = ExtResource("6_btuh2")

[node name="AnimatedSprite2DPag3ManoDer" type="AnimatedSprite2D" parent="PanelTutorialPag3"]
position = Vector2(1389.04, 996.483)
sprite_frames = ExtResource("6_sif4j")
autoplay = "default"
frame_progress = 0.203198
speed_scale = 3.0

[node name="PanelTutorialPag4" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 151.0
offset_top = -3.0
offset_right = 2151.0
offset_bottom = 1509.0
scale = Vector2(0.431024, 0.431024)

[node name="TextureRectTextoPag4" type="TextureRect" parent="PanelTutorialPag4"]
layout_mode = 2
offset_left = -341.0
offset_right = 2318.0
offset_bottom = 1512.0
texture = ExtResource("8_rwlf0")

[node name="ButtonContinuarPag4" type="TextureButton" parent="PanelTutorialPag4"]
layout_mode = 2
offset_left = 303.927
offset_top = 689.057
offset_right = 2303.93
offset_bottom = 2201.06
scale = Vector2(0.686927, 0.571132)
shortcut = ExtResource("12_sif4j")
texture_normal = ExtResource("9_d17nt")

[node name="AnimatedSprite2DPag4ManoIzq" type="AnimatedSprite2D" parent="PanelTutorialPag4"]
position = Vector2(577.694, 988.344)
sprite_frames = ExtResource("6_sif4j")
autoplay = "default"
frame_progress = 0.301307
speed_scale = 3.0

[node name="PanelCuentaRegresiva" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 153.0
offset_top = -5.0
offset_right = 2153.0
offset_bottom = 1507.0
scale = Vector2(0.430355, 0.430355)

[node name="TextureRectTextoEmpezara" type="TextureRect" parent="PanelCuentaRegresiva"]
layout_mode = 2
offset_left = -339.0
offset_top = -295.0
offset_right = 2317.0
offset_bottom = 1217.0
texture = ExtResource("10_pjmwy")

[node name="TextureRectNumeroConteo" type="TextureRect" parent="PanelCuentaRegresiva"]
layout_mode = 2
offset_left = -342.0
offset_right = 2305.0
offset_bottom = 1512.0
texture = ExtResource("11_qah25")

[node name="TimerConteo" type="Timer" parent="."]
